Named the features which directly contribute to wage from the correlation matrix of Q 17

--- a/GL_Project.ipynb
+++ b/GL_Project.ipynb
@@ -12457,6 +12457,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c55ba881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This shows that International Reputation, Overall Rating and Potential directly contribute to the wage of a player."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 124,
    "id": "63f3829b-4068-4003-9b35-28dc66431c76",
    "metadata": {},
